--- a/README.org
+++ b/README.org
@@ -1,3 +1,3 @@
 A emacs major mode for editing emacs lisp code.
 
-[[http://ergoemacs.org/emacs/xah-elisp-mode.html][home page]]
+Home page: http://ergoemacs.org/emacs/xah-elisp-mode.html 
