--- a/README.org
+++ b/README.org
@@ -3,3 +3,11 @@ A emacs major mode for editing emacs lisp code.
 [[http://melpa.org/#/xah-elisp-mode][file:http://melpa.org/packages/xah-elisp-mode-badge.svg]]
 
 Home page: http://ergoemacs.org/emacs/xah-elisp-mode.html 
+
+Put in 5 bucks in my patreon.
+https://www.patreon.com/xahlee
+
+or http://paypal.com
+pay to xah@xahlee.org
+
+Thanks.
